tests/ui/mir-dataflow/inits-1.stderr
error: rustc_peek: bit not set
  --> $DIR/inits-1.rs:14:5
   |
LL |     rustc_peek(&ret);
   |     ^^^^^^^^^^^^^^^^

error: rustc_peek: bit not set
  --> $DIR/inits-1.rs:34:5
   |
LL |     rustc_peek(&y);
   |     ^^^^^^^^^^^^^^

error: rustc_peek: bit not set
  --> $DIR/inits-1.rs:42:5
   |
LL |     rustc_peek(&x);
   |     ^^^^^^^^^^^^^^

error: stop_after_dataflow ended compilation

error: aborting due to 4 previous errors

